# CatDesk

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
assets/: CatDesk.terminal
extensions/catdesk-auto-approval/: README.md  background.js  content.js  manifest.json
npm/: catdesk.js  postinstall.js
src/: browser.rs  command.rs  devtools.rs  macos_terminal.rs  main.rs  mascot.rs  mcp.rs  ngrok.rs  server.rs  state.rs  workspace_tools.rs
src/binagotchy_gen/: binagotchy_utils.rs  character.rs  constants.rs  eye_animation.rs  headwear.rs  mod.rs  spirit.rs  types.rs
src/theme/: concise.rs  mod.rs  neon.rs
src/widget/: catdesk_dashboard.html  mcp3000_dashboard.html
