[package]
name = "mcp3000"
version = "4.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = "0.1"
base64 = "0.22"

[profile.release]
lto = true
strip = true
codegen-units = 1
